--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <label for="guess">
-            <h1>I Want To Play A Game</h1>
-            <input type="number" name="guess" id="guess">
-            <button class="guess-btn btn" type="submit" onsubmit="preventDefault">Guess!</button>
-        </label>
-        <p class="text correct"></p>
-        <p class="warning error"></p>
-        <p class="highscore-text correct"></p>
-        <button class="play-again btn" type="reset" onsubmit="preventDefault">Play Again</button>
-        <ul class="list">
-            <h2>Your guesses:</h2>
-        </ul>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="container">
+            <label for="guess">
+                <h1>
+                    I Want To Play A Game! <br />
 
-    </div>
+                    <span>
+                        Guess a number between
+                        <br />
+                        1 - 100
+                    </span>
+                </h1>
+                <input type="number" name="guess" id="guess" />
+                <button
+                    class="guess-btn btn"
+                    type="submit"
+                    onsubmit="preventDefault"
+                >
+                    Guess!
+                </button>
+            </label>
+            <p class="text correct"></p>
+            <p class="text-wrong error"></p>
+            <p class="warning error"></p>
+            <p class="highscore-text correct"></p>
+            <button
+                class="play-again btn"
+                type="reset"
+                onsubmit="preventDefault"
+            >
+                Play Again
+            </button>
+            <ul class="list">
+                <h2>Your guesses:</h2>
+            </ul>
+        </div>
         <script src="./guessing game ec utbildning.js"></script>
-</body>
+    </body>
 </html>
